# env-setup

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  initial.sh  pyproject.toml
setup/: __init__.py
